<resources>
    <string name="app_name">Automated Home Hydroponics</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_intro_screen">MainActivity</string>
    <string name="title_user_profile">User Profile</string>
    <string name="title_plant_vitals">Plant Vitals</string>
    <string name="title_plant_search">Plant Search</string>
    <string name="title_notes">Notes</string>
    <string name="title_maps">Maps</string>
    <string name="title_logs">Logs</string>
    <string name="title_current_vitals">CURRENT VITALS</string>
    <string name="sensor_tds">TDS</string>
    <string name="sensor_ph">PH</string>
    <string name="sensor_humidity">Humidity</string>
    <string name="sensor_light">Light</string>
    <string name="sensor_water_temp">Water Temperature</string>
    <string name="sensor_water_level">Water Level</string>
    <string name="sensor_ph_up">pH Up Level</string>
    <string name="sensor_ph_down">pH Down Level</string>
    <string name="sensor_distance">Plant Height</string>
    <string name="sensor_air_temp">Air Temperature</string>
    <string name="sensor_nutrient">Nutrient Level</string>
    <string name="log_card_title">Log Title</string>
    <string name="log_card_body">Log Body</string>
    <string name="plant_card_title">Plant Title</string>
    <string name="plant_card_body">Plant Body</string>
    <string name="notes_card_title">Notes Title</string>
    <string name="notes_card_body">Notes Body</string>

</resources>