<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_plant_vitals">

    <fragment
        android:id="@+id/navigation_user_profile"
        android:name="com.example.automatedhomehydroponics.ui.User_Profile.UserProfileFragment"
        android:label="@string/title_user_profile"
        tools:layout="@layout/fragment_user_profile" />

    <fragment
        android:id="@+id/navigation_plant_vitals"
        android:name="com.example.automatedhomehydroponics.ui.Plant_Vitals.PlantVitalsFragment"
        android:label="@string/title_plant_vitals"
        tools:layout="@layout/fragment_plant_vitals" />

    <fragment
        android:id="@+id/navigation_plant_search"
        android:name="com.example.automatedhomehydroponics.ui.Plant_Search.PlantSearchFragment"
        android:label="@string/title_plant_search"
        tools:layout="@layout/fragment_plant_search" />

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.example.automatedhomehydroponics.ui.Notes.NotesFragment"
        android:label="@string/title_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_logs"
        android:name="com.example.automatedhomehydroponics.ui.Logs.LogsFragment"
        android:label="@string/title_logs"
        tools:layout="@layout/fragment_logs" />
</navigation>