<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Plant_Vitals.PlantVitalsFragment">

    <TextView
        android:id="@+id/textViewDIST2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="284dp"
        android:layout_marginBottom="16dp"
        android:text="Hours"
        app:layout_constraintBottom_toTopOf="@+id/editTextHRS2"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextHRS2"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:layout_marginBottom="32dp"
        android:autofillHints=""

        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@id/editTextHRS2"


        app:layout_constraintBottom_toTopOf="@+id/button_add_plant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.196"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextAIRTEMP2"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""

        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@id/editTextAIRTEMP2"
        app:layout_constraintBottom_toTopOf="@+id/textViewDIST2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextWATERTEMP2"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"

        android:inputType="numberDecimal"
        android:labelFor="@id/editTextWATERTEMP2"
        app:layout_constraintBottom_toTopOf="@+id/textViewDIST"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextPH2"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@id/editTextPH2"

        app:layout_constraintBottom_toTopOf="@+id/textViewLIGHT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.745"
        app:layout_constraintStart_toEndOf="@+id/editTextTDS" />

    <EditText
        android:id="@+id/editTextTDS2"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@id/editTextTDS2"
        app:layout_constraintBottom_toTopOf="@+id/textViewHUMID"

        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextDIST2"
        android:layout_width="110dp"
        android:layout_height="52dp"
        android:layout_marginStart="240dp"
        android:layout_marginBottom="32dp"

        android:autofillHints=""
        android:ems="10"
        android:inputType="numberDecimal"


        android:labelFor="@id/editTextDIST2"
        app:layout_constraintBottom_toTopOf="@+id/button_add_plant"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextWATERTEMP"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"

        android:inputType="numberDecimal"
        android:labelFor="@id/editTextWATERTEMP"
        app:layout_constraintBottom_toTopOf="@+id/textViewDIST"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextAIRTEMP"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""

        android:ems="10"
        android:inputType="numberDecimal"

        android:labelFor="@id/editTextAIRTEMP"
        app:layout_constraintBottom_toTopOf="@+id/textViewDIST2"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextLIGHT"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"

        android:inputType="numberDecimal"
        android:labelFor="@id/editTextLIGHT"
        app:layout_constraintBottom_toTopOf="@+id/textViewWATERTEMP"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextLIGHT2"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"

        android:inputType="numberDecimal"
        android:labelFor="@id/editTextLIGHT2"
        app:layout_constraintBottom_toTopOf="@+id/textViewWATERTEMP"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextHUMID"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"

        android:inputType="numberDecimal"
        android:labelFor="@id/editTextHUMID"
        app:layout_constraintBottom_toTopOf="@+id/textViewAIRTEMP"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextHUMID2"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginStart="116dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:ems="10"

        android:inputType="numberDecimal"
        android:labelFor="@id/editTextHUMID2"
        app:layout_constraintBottom_toTopOf="@+id/textViewAIRTEMP"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextPH"
        android:layout_width="80dp"
        android:layout_height="52dp"

        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@id/editTextPH"

        app:layout_constraintBottom_toTopOf="@+id/textViewLIGHT"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.897"
        app:layout_constraintStart_toEndOf="@+id/editTextTDS" />

    <TextView
        android:id="@+id/textViewHUMID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sensor_humidity"
        app:layout_constraintBottom_toTopOf="@+id/editTextHUMID"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textViewLIGHT"
        android:layout_width="41dp"
        android:layout_height="21dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="12dp"
        android:text="@string/sensor_light"
        app:layout_constraintBottom_toTopOf="@+id/editTextLIGHT"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewPH"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="116dp"
        android:text="@string/sensor_ph"
        app:layout_constraintBottom_toTopOf="@+id/editTextPH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

    <TextView
        android:id="@+id/textViewWATERTEMP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="8dp"
        android:text="@string/sensor_water_temp"
        app:layout_constraintBottom_toTopOf="@+id/editTextWATERTEMP"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewDIST"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="76dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sensor_distance"
        app:layout_constraintBottom_toTopOf="@+id/editTextDIST2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textViewTDS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="30dp"
        android:text="@string/sensor_tds"
        app:layout_constraintBottom_toTopOf="@+id/editTextTDS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.908" />

    <TextView
        android:id="@+id/textViewAIRTEMP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginBottom="10dp"
        android:text="@string/sensor_air_temp"
        app:layout_constraintBottom_toTopOf="@+id/editTextAIRTEMP"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTDS"
        android:layout_width="80dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:autofillHints=""
        android:clickable="false"
        android:ems="10"
        android:inputType="numberDecimal"
        android:labelFor="@id/editTextTDS"
        app:layout_constraintBottom_toTopOf="@+id/textViewHUMID"

        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_add_plant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="Add Plant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.961" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:text="Plant Name"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/textViewPH"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
